# pointnet

./: README.md  main.py  pyproject.toml  requirements.txt
data/input/: README.md  classes.json  scene_00.npz  scene_00.ply  scene_01.npz  scene_02.npz  scene_03.npz  scene_03.ply  scene_04.npz  scene_04.ply  scene_05.npz  scene_06.npz  scene_07.npz  scene_08.npz  scene_09.npz  splits.json
notebooks/: data_exploration.ipynb
src/pointnet/: eval.py  model.py  train.py  visualization.py
