[project]
name = "pointnet"
version = "0.1.0"
description = "Demo project for 3D point cloud segmentation"
authors = [
    { name = "Louis WANG", email = "louis.xiao.wang@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8, <3.11"
dependencies = [
    "matplotlib",
    "open3d",
    "torch",
    "tqdm",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"